openshift/base/jhipster-zipkin/jhipster-zipkin-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: jhipster-zipkin
spec:
  replicas: 1
  selector:
    com.xebialabs.service: jhipster-zipkin
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        com.xebialabs.service: jhipster-zipkin
    spec:
      containers:
      - name: jhipster-zipkin
        image: jhipster/jhipster-zipkin:v3.0.1
        ports:
        - containerPort: 9411
          name: http
          protocol: TCP
      restartPolicy: Always
