openshift/base/jhipster-zipkin/jhipster-zipkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    com.xebialabs.service: jhipster-zipkin
  name: jhipster-zipkin
spec:
  ports:
  - name: "http"
    port: 9411
    targetPort: 9411
  selector:
    com.xebialabs.service: jhipster-zipkin
