openshift/base/jhipster-zipkin/jhipster-zipkin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    com.xebialabs.service: jhipster-zipkin
  name: jhipster-zipkin
spec:
  port:
    targetPort: 9411
  to:
    kind: Service
    name: jhipster-zipkin
    weight: 100
  wildcardPolicy: None
